--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "@fancyapps/ui": "^4.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +12,10 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
-    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
