--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.5",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
