--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "@types/react-slick": "^0.23.8",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
@@ -52,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-slick": "^0.23.8"
+    "@types/react-router-dom": "^5.3.3"
   }
 }
